--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+    <title>
+      <% if(typeof pageTitle !== 'undefined') { %>
+        <%= pageTitle %>
+      <% } %>
+
+    </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="./bootstrap/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="/public/bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/bootstrap/css/bootstrap-reboot.min.css">
   </head>
   <body>
     <div class="container">
