--- a/views/login.html
+++ b/views/login.html
@@ -1,3 +1,14 @@
 <%- include('layout/header') -%>
-    <h1>Hello, world!</h1>
+    
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+            <div class="card">
+                <div class="card-header text-center">
+                    Login Page
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
 <%- include('layout/footer') -%>
