Merubah default port untuk database, update view welcome

--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,3 +1,5 @@
 <%- include('layout/header') %>
     <h1 class="text-center mt-5">Welcome</h1>
+    <p>If you see this page then you already successfully running the node framework.</p>
+    <p>But you've done nothing yet</p>
 <%- include('layout/footer') %>
