--- a/views/login.html
+++ b/views/login.html
@@ -1,10 +1,19 @@
 <%- include('layout/header') -%>
     
+    <div class="mt-5"></div>
     <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+        <div class="col-lg-8 offset-lg-2 col-md-12 col-sm-12 col-xs-12 ">
             <div class="card">
                 <div class="card-header text-center">
-                    Login Page
+                    <h4>Login Page</h4>
+                </div>
+                <div class="card-block">
+                    <form action="" class="form-horizontal">
+                        
+                    </form>
+                </div>
+                <div class="card-footer text-muted text-center">
+                    <%= 2017 %>
                 </div>
             </div>
         </div>
