add helper and change error handler on app

--- a/views/error.html
+++ b/views/error.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Error</title>
+	<title><%= title %></title>
 	<link rel="stylesheet" type="text/css" href="/public/stylesheets/style.css">
 </head>
 <body>
